# mailbox

./: .env.dev.example  .env.example  .gitignore  CLAUDE.md  DEV.md  README.md  docker-compose.dev.yml  docker-compose.yml  prd-email-agent-appliance.md  ssh.md
.claude/: settings.json
.planning/: HANDOFF-2026-04-28.md  HANDOFF-2026-05-01.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
Install Guide/: Install.md
build-log/: mailbox-one-t2-build-log-v0_1-2026-04-23.md  mailbox-one-t2-build-log-v0_3-2026-04-23.md  mailbox-one-t2-build-log-v0_4-2026-04-23.md  mailbox-one-t2-build-log-v0_5-2026-04-23.md  mailbox-one-t2-build-log-v0_6-2026-04-24.md  mailbox-one-t2-build-log-v0_7-2026-04-25.md  mailbox-one-t2-build-log-v0_8-2026-04-25.md  mailbox-one-t2-build-log-v0_9-2026-04-26.md
caddy/: Caddyfile
dashboard/: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  biome.json  drizzle.config.ts  instrumentation.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: addendum-cloud-use-doctrine-v0_1-2026-05-13.md  addendum-drafting-prompt-audit-v0_1-2026-05-16.md  addendum-t2-model-candidates-v0_1-2026-05-13.md  dr25-revert-root-cause-2026-05-14.md  memo-nemotron-license-review-v0_2-2026-05-14.md  (+6 more)
optimization/dspy/: .gitignore  README.md  metric.py  optimize.py  pyproject.toml  signatures.py  trace_set.py
optimization/dspy/scripts/: judge_discriminative_smoke.py
optimization/dspy/tests/: conftest.py  test_metric.py  test_signatures.py  test_trace_set.py
(+394 files in other folders)
